Added 'if_vagrant_box_exists()' function

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-/.build 
-/.files
-/.setup 
-/.tasks 
-/.readme 
-/.install 
-/.version 
-/.authors 
-/.changelog 
-/.uninstall 
+/build 
+/files
+/setup 
+/tasks 
+/readme 
+/install 
+/version 
+/authors 
+/changelog 
+/uninstall 
